--- a/src/NPC.css
+++ b/src/NPC.css
@@ -139,3 +139,10 @@
   margin-top: 5px;
   font-size: 16px;
 }
+
+.download-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 2;
+}
